# agentmap

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.vi.md
.agentlens/: .manifest.json  AGENT.md  INDEX.md
.agentlens/accuracy/: quiz.json
.agentlens/modules/npm-cli-lib/: MODULE.md
.agentlens/modules/src/: MODULE.md  imports.md
.agentlens/modules/src-analyze/: MODULE.md  imports.md
.agentlens/modules/src-analyze-lang/: MODULE.md  imports.md
.agentlens/modules/src-cli/: MODULE.md  imports.md  outline.md
.agentlens/modules/src-cli-tui/: MODULE.md  imports.md
.agentlens/modules/src-emit/: MODULE.md  imports.md
.agentlens/modules/src-generate/: MODULE.md  imports.md  outline.md
.agentlens/modules/src-mcp/: MODULE.md  imports.md
.agentlens/modules/src-scan/: MODULE.md  imports.md
.agentlens/modules/src-telemetry/: MODULE.md  imports.md
.agentlens/modules/src-types/: MODULE.md
.agentmap/: .manifest.json  AGENTS.md  imports.md  memory.md  outline.md
.agentmap/modules/src/: MODULE.md
.agentmap/modules/src-analyze/: MODULE.md
.agentmap/modules/src-analyze-lang/: MODULE.md
.agentmap/modules/src-cli/: MODULE.md
.agentmap/modules/src-emit/: MODULE.md
.agentmap/modules/src-generate/: MODULE.md  outline.md
.agentmap/modules/src-scan/: MODULE.md
.agentmap/modules/src-types/: MODULE.md
.github/workflows/: ci.yml  release.yml
docs/: ai-agent-setup.md  mcp-server.md  mcp-server.vi.md
npm/cli/: README.md  package.json
npm/cli/lib/: index.js
npm/cli/scripts/: postinstall.js
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
scripts/: install.sh
src/: config.rs  lib.rs  main.rs  runner.rs
src/analyze/: graph.rs  memory.rs  mod.rs  parser.rs
src/analyze/lang/: c.rs  cpp.rs  dart.rs  go.rs  javascript.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs
src/cli/: args.rs  check.rs  hooks.rs  mod.rs  serve.rs  telemetry.rs  templates.rs  update.rs  watch.rs
src/cli/tui/: mod.rs  theme.rs  wizard.rs
src/emit/: json.rs  manifest.rs  mod.rs  writer.rs
src/generate/: agent.rs  agents.rs  file_doc.rs  index.rs  memory.rs  mod.rs  module_content.rs  outline.rs  templates.rs
src/mcp/: mod.rs  server.rs
src/scan/: filter.rs  git.rs  mod.rs  remote.rs  walker.rs
src/telemetry/: counter.rs  event.rs  mod.rs  storage.rs
src/types/: file.rs  memory.rs  mod.rs  symbol.rs
