[package]
name = "agentlens"
version = "0.5.0"
edition = "2021"
description = "CLI tool to prepare codebases for AI agents by generating outlines, memory files, and reading rules"
license = "MIT"
repository = "https://github.com/nguyenphutrong/agentlens"
authors = ["Trong Nguyen <nguyenphutrong.dev@gmail.com>"]
keywords = ["cli", "ai", "code-analysis", "documentation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Directory traversal
walkdir = "2"
ignore = "0.4"

# Pattern matching
regex = "1"
once_cell = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

# Self-update
self_update = { version = "0.41", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# MCP Server
rmcp = { version = "0.12", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "1.2"

# Telemetry & Token Counting
tiktoken-rs = "0.9"
uuid = { version = "1", features = ["v4"] }

# Interactive TUI
inquire = "0.7"
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "agentlens"
path = "src/main.rs"

[lib]
name = "agentlens"
path = "src/lib.rs"
